k3s/user-timeline-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-timeline-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-timeline-service
  template:
    metadata:
      labels:
        app: user-timeline-service
    spec:
      containers:
        - name: user-timeline-service
          image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-03/user-timeline-service:latest
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
