k3s/user-timeline-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-timeline-service
spec:
  selector:
    app: user-timeline-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
